compiler/tests/en/errors/pure_impure_call.salam
// EXPECT: E012
func log_it(x i32) i32:
    println(x)
    ret x
end

pure func twice(x i32) i32:
    ret log_it(x) * 2
end

func main:
    println(twice(3))
end
